Refactor. adding loadFromJanus (wip)

--- a/config.properties
+++ b/config.properties
@@ -1,2 +1,3 @@
+storage.hostname=localhost
 storage.backend=cassandra
-gremlin.graph=org.apache.tinkerpop.gremlin.hadoop.structure.HadoopGraph
+storage.cassandra.keyspace=wow7
