--- a/janus-distributed-olap/pom.xml
+++ b/janus-distributed-olap/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lolski</groupId>
-  <artifactId>janusgraph</artifactId>
+  <artifactId>janus-distributed-olap</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>janusgraph</name>
